show & hide; fix alignment of dbus and ipmi timelines

--- a/ipmi_vis.css
+++ b/ipmi_vis.css
@@ -1,3 +1,7 @@
+body {
+	font-family: "sans"
+}
+
 #div_title, #div_group_by, #div_canvas, #div_navi_and_replay, #ipmi_replay {
   text-align: center
 }
@@ -49,4 +53,21 @@
 	width: 100%;
 	color: #00F;
 	background-color: #CCF;
+}
+
+#welcome_screen {
+	border: 1px dashed black;
+	height: 300px;
+	text-align: left;
+}
+
+#welcome_screen_content {
+	margin-left: auto;
+	margin-right: auto;
+	width: 500px;
+}
+
+#span_group_by_dbus, #span_group_by_ipmi, #span_group_by_boost_asio_handler,
+#div_navi_and_replay{
+  display: none;
 }
